2007-10-09  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: added method to project
	  operations.

2007-10-08  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: Fixed Bug 325223 -
	  Interface refactory doesn't implement correctly (4 bugs).

2007-10-08  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.StandardHeader/StandardHeaderPanel.cs: Overworked the
	  standard header panel, fixing issue "Bug 331657 - Standard header
	  settings are not saved".

2007-10-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Content/TextEditorProperties.cs,
	  MonoDevelop.Ide.Templates/TextFileDescriptionTemplate.cs,
	  MonoDevelop.Ide.Templates/CodeDomFileDescriptionTemplate.cs: fixed bug
	  328817 - New created file use Tab with Convert Tab to spaces enabled.

2007-10-05  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Ide.Commands/ProjectCommands.cs
	(ExportProjectHandler.Update): Use CurrentSelectedCombineEntry instead
	of CurrentOpenCombine.

2007-10-05  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: Show 'go to base' command
	  only for classes. Fixes bug #325461.

2007-10-05  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/FolderNodeBuilder.cs: Save the project
	  after adding a folder. Fixes bug #325467.

2007-10-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Tasks/TaskService.cs: Fixed bug 325537 - Task Pad not
	  clearing

2007-10-03  Zach Lute <zach.lute@gmail.com>

	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewLayoutDialog.cs, 
	  gtk-gui/gui.stetic: "New" button now returns "OK" response so new
	  layout will actually be created. (Bug #330104)

2007-10-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/Workbench.cs: Avoid crash in ShowNext/Previous when
	  the provided location does not have a valid file name.

2007-10-02  Lluis Sanchez Gual <lluis@novell.com> 
